# lua_shim

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  demo.cpp  main.cc
lua/: CMakeLists.txt  functional_appliers.h  functional_pushers.h  lua_exception.h  lua_gcobject.h  lua_pop.h  lua_userdata.h  lua_util.h  shim_builtin.h  shim_defs.h  shim_dispatch.h  shim_enum.h  shim_types.h  shim_user.h  type_registration.h
reg/: CMakeLists.txt  appliers.hpp  functional_appliers.hpp  functor_pushers.hpp  lua_gcobject.hpp  lua_getter.hpp  lua_pop.hpp  lua_util.hpp  type_registration.hpp
reg/tests/: CMakeLists.txt  functor_pushers.cpp  type_registration.cpp
shim/: CMakeLists.txt  lua_debug.h  lua_mock.h  shim_applier.h  shim_builtin.hpp  shim_builtin_defs.hpp  shim_builtins.h  shim_defs.h  shim_defs.hpp  shim_dispatch.h  shim_dispatch.hpp  shim_dispatchx.h  shim_dispatchx.hpp  shim_exception.h  shim_functor_pushers.h  shim_lua_util.h  shim_proxy.h  shim_registration.h  shim_user.h  shim_user.hpp  shim_user_defs.hpp  shim_util.h  shim_util.hpp
shim/tests/: CMakeLists.txt  shim_dispatch.cpp  shim_dispatchx.cpp  shim_user.cpp
test/: CMakeLists.txt  common.h  shim_applier.cc  shim_builtins.cc  shim_registration.cc  shim_user.cc
tests/: CMakeLists.txt  common.h  functional_pushers.cc  lua_gcobject.cc  lua_pop.cc  lua_userdata.cc  shim_dispatch.cc  type_registration.cc
